fixed payment method page and cvv and expiry spacing between them

--- a/css/grid.css
+++ b/css/grid.css
@@ -25,6 +25,10 @@
 	width: 16.66%;
 }
 
+.col-3of12 {
+	width: 25%;
+}
+
 .col-4of12 {
 	width:33.33%;
 }
